add standar pertama

--- a/main.tex
+++ b/main.tex
@@ -12,8 +12,8 @@
 \title{Panduan Tingkat Akhir\\[1ex]     %your thesis title,
         Internship II dan Tugas Akhir}   %note \\[1ex] is a line break in the title
 
-\author{Nama Saya Ganteng (113040087)}             %your name
-\college{Proposal Intership II}  %your college
+\author{Rolly Maulana Awangga, Syafrial Fachrie Pane}             %your name
+\college{Kordinator Tugas Akhir dan Intership II}  %your college
 
 %\renewcommand{\submittedtext}{change the default text here if needed}
 \degree{Politeknik Pos Indonesia}     %the degree
