--- a/section/abstract.tex
+++ b/section/abstract.tex
@@ -1,5 +1,8 @@
 \begin{abstract}
-plenty of waffle, plenty of waffle, plenty of waffle, plenty of waffle,
-plenty of waffle, plenty of waffle, plenty of waffle, plenty of waffle.
+	Buku Pedoman ini dibuat dengan tujuan memberikan acuan, bagi mahasiswa Tingkat Akhir dan dosen
+	Pembimbing. Pada intinya buku ini menjelaskan secara lengkap tentang Standar pengerjaan Intership II dan 
+	Tugas Akhir
+	di Program Studi D4 Teknik Informatika, dan juga mengatur mekanisme, teknik penulisan, serta
+	penilaiannya.Dengan demikian diharapkan semua pihak yang terlibat dalam aktivitas Bimbingan Mahasiswa Tingkat Akhir
+	berjalan lancar dan sesuai dengan standar.
 \end{abstract}
-i would you like to compete. 
