--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1,5 +1,12 @@
-\chapter{Pendahuluan}
+\chapter{Standar Pengajuan}
 
+Pada pengajuan kali ini. Setiap mahasiswa tingkat akhir wajib untuk menemui pembimbing untuk menyepakati judul, metode dan sumber data yang digunakan dalam penelitian. Pengajuan akan dilakukan melalui formulir online yang diberikan oleh Pembimbing apabila sudah disepakati dan disetujui oleh pembimbing. Formulir yang perlu diisi terdiri dari :
+\begin{enumerate}
+\item abstrack berbahasa inggris terdiri dari 150-250 kata.
+\item metode yang digunakan
+\item sumber data yang digunakan
+\item jumlah data yang digunakan
+\end{enumerate}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.5\textwidth]{figures/commitroma.png}}
