--- a/section/acknowlegements.tex
+++ b/section/acknowlegements.tex
@@ -1,4 +1,3 @@
 \begin{acknowledgements}
-plenty of waffle, plenty of waffle, plenty of waffle, plenty of waffle,
-plenty of waffle, plenty of waffle, plenty of waffle, plenty of waffle.
+Pertama-tama kami panjatkan puji dan syukur kepada Allah SWT yang telah memberikan rahmat dan hidayah-Nya sehingga Buku Pedoman Tingkat Akhir ini dapat diselesaikan.
 \end{acknowledgements}
