--- a/section/dedication.tex
+++ b/section/dedication.tex
@@ -1,5 +1,5 @@
 \begin{dedication}
-This thesis is dedicated to\\
- someone\\
-for some special reason\\
+`Jika Kamu tidak dapat menahan lelahnya belajar, \\
+Maka kamu harus sanggup menahan perihnya Kebodohan.'\\ 
+~Imam Syafi'i~\\
 \end{dedication}
