--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1,36 +1,33 @@
 \chapter{Standar Pengajuan}
 
-Pada pengajuan kali ini. Setiap mahasiswa tingkat akhir wajib untuk menemui pembimbing untuk menyepakati judul, metode dan sumber data yang digunakan dalam penelitian. Pengajuan akan dilakukan melalui formulir online yang diberikan oleh Pembimbing apabila sudah disepakati dan disetujui oleh pembimbing. Formulir yang perlu diisi terdiri dari :
+Pada pengajuan kali ini. Setiap mahasiswa tingkat akhir wajib untuk menemui pembimbing untuk menyepakati judul, metode, sumber data, abstrack dan referensi yang akan digunakan dalam penelitian. Pengajuan penelitian tingkat akhir(Intership II dan Tugas Akhir) dilakukan melalui formulir online yang diberikan dan diisi bersama dengan Pembimbing apabila sudah disepakati dan disetujui bersama pembimbing. Pengisian form menggunakan email poltekpos dari pembimbing. Pastikan sudah melakukan login dengan email poltekpos terlebih dahulu oleh pembimbing. Formulir bisa diakses pada laman situs if.poltekpos.ac.id. Perlu diperhatikan Formulir yang perlu diisi terdiri dari :
 \begin{enumerate}
+\item Judul yang diajukan dalam bahasa inggris
 \item abstrack berbahasa inggris terdiri dari 150-250 kata.
 \item metode yang digunakan
 \item sumber data yang digunakan
 \item jumlah data yang digunakan
+\item daftar referensi
 \end{enumerate}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Dari point diatas perlu diperhatikan adalah standar pengisian form masing-masing. Daftar nama pembimbing akan diumumkan melalui papan pengumuman dan media daring. Setiap mahasiswa tingkat akhir harus memperhatikan data dosen yang terdapat pada situs Informatika pada menu tim seperti terlihat pada gambar \ref{figure:timif}.
 \begin{figure}[ht]
-	\centerline{\includegraphics[width=0.5\textwidth]{figures/commitroma.png}}
-	\caption{penjelasan keterangan gambar.}
-	\label{figure:labelgambar}
+	\centerline{\includegraphics[width=0.5\textwidth]{figures/timif.png}}
+	\caption{Data Pembimbing dari situs informatika.}
+	\label{figure:timif}
 	\end{figure}
-Diatas gambar \ref{figure:labelgambar} merupakan contoh.
-\section{Sub Bab 1}
-Einstein's paper: \cite{Einstein}. ini merupakan contoh sitasi cuy.
-\subsection{Sub Sub bab 1}
-ini merupkana sub bab sub sub. dibawah contoh gambar yang diinsertkan ke artikel
-\subsubsection{Sub Sub sub bab 1}
-o consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa q
-\section{Contoh tabel}
-ini merupakan contoh tabel \ref{table:contoh} ukuran kecil.
-\begin{table}[h]
-\caption{Small Table}
-\centering
-\begin{tabular}{ccc}
-\hline
-one&two&three\\
-\hline
-C&D&E\\
-\hline
-\end{tabular}
-\label{table:contoh}
-\end{table}
+Setiap mahasiswa wajib mematuhi aturan dari masing-masing pembimbing tentang tata cara komunikasi dan aturan bimbingan yang bisa diakses dari laman portal dosen masing-masing yang terdapat pada situs informatika atau pertemuan langsung dengan pembimbing. Standar pengisian form pengajuan judul penelitian harus sesuai dengan standar pengajuan pada chapter ini.
+
+\section{Judul}
+Judul menggunakan bahasa Inggris. Judul diutamakan dapat menggambarkan riset dan metode yang akan dilakukan. Pemilihan judul juga harus dengan kesepakatan pembimbing. 
+
+\section{Abstract}
+Abstrak mengunakan bahasa inggris aktif dan positif. Tidak terdapat sitasi pada abstrak. Kalimat harus utuh terdiri dari Subjek Predikat Objek dan boleh ditambahkan Keterangan. Tidak boleh menggunakan kalimat pasif atau kalimat negatif. Abstrak harus terdiri dari 150-250 kata. Abstrak berisi latar belakang, tujuan, metode, dan target output dari penelitian.
+
+\section{Metode}
+Metode yang digunakan adalah metode yang terdapat pada referensi dalam 10 tahun terakhir dari jurnal internasional terindex scopus. Penelitian harus menggunakan atau mengkombinasikan minimal 2 metode yang berbeda.
+
+\section{Data Penelitian}
+Sumber data penelitian harus ditargetkan dan jelas dari mana sumbernya. Sebutkan dari mana sumber datanya, berapa banyak datanya serta diskusikan bersama pembimbing mengenai jenis data apa saja yang harus didapatkan. 
+
+\section{Referensi}
+Semua referensi yang digunakan harus terindex pada google scholar. Minimal 15 referensi dari artikel terindeks Scopus dan merupakan artikel dalam 5 tahun terakhir. Format referensi yang disikan pada formulir pengajuan penelitian tingkat akhir adalah BibTex. BibTex referensi bisa didapatkan pada laman Google Scholar.
