--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -1,4 +1,33 @@
-\chapter{Metode}
+\chapter{Standar Penulisan Jurnal}
+
+Penulisan jurnal harus menggunakan Latex dengan template IEEE.　Template bisa di unduh pada menu dokumen portal kampus keren atau situs informatika. Penulisan jurnal harus mengikuti standar penulisan akademis dan mengikuti kerangka jurnal. Jurnal wajib menggunakan bahasa inggris(Amerika) yang dikoreksi bersama pembimbing atau kolaborator. 
+
+\section{Standar Penulisan}
+Di dalam penulisan artikel ilmiah harus mengikuti standar minimal penulisan ilmiah. Standar ini digunakan untuk menyamakan semantik bahasa agar tulisan lebih mudah dibaca dan dipahami. Penggunaan standar merupakan keniscayaan dalam penulisan artikel ilmiah.
+\subsection{Penggunaan Kalimat}
+Penulisan jurnal harus menggunakan kalimat aktif dan positif. Memiliki Subject, Predikat dan Object yang jelas. Tidak bertele-tele dan terlalu panjang dalam penggunaan kalimat(terlalu banyak kata sambung dan tanda koma). Satu paragraf minimal terdiri dari tiga kalimat.
+\subsection{Penempatan Sitasi}
+Sitasi ditempatkan tepat pada akhir kalimat penjelasan referensi sebelum tanda pemisah antar kalimat(koma atau titik) tanpa spasi. Sitasi juta dapat ditumpuk pada sebuah kalimat yang merupaka  penjelasan singkat dari referensi. 
+\subsection{gambar, rumus, tabel}
+Tidak diperbolehkan memberikan narasi penunjukan relatif. seperti :
+\begin{itemize}
+	\item Lebih detailnya lihat gambar di bawah ini
+	\item Untuk lebih jelasnya lihar rumus di bawah ini
+	\item data bisa dilihat di tabel di atas
+\end{itemize}
+
+\section{Kerangka Jurnal}
+Kerangka acuan dalam membuat jurnal harus memenuhi standar acuan di sub bab ini. Masing-masing kerangka jurnal harus memenuhi standar dan aturan yang ditetapkan. Pengerjaan jurnal biasanya lebih awal daripada pengerjaan laporan.Bagian-bagian dari jurnal terdiri dari abstrak(Abstract), pendahuluan(Introduction), metode(Methods), Penelitian Terkait(Related Works),percobaan(Experiment), hasil(Result) dan diskusi(Discussion).
+\subsection{Abstract}
+Terdiri dari 150-250 kata tanpa ada sitasi. Berisi latar belakang, tujuan,metode, hasil,kesimpulan dan saran. Kata kunci atau keyword ditentukan dengan nama metode yang digunakan dan sub sub bidang penelitian yang dilakukan. Kata kunci minimal harus terdapat tiga kata kunci.
+
+\subsection{Introduction}
+Terdapat penekanan dan penjelasan akan pentingnya dilakukan penelitian ini. Setiap ada pemaparan data, informasi, dan sebuah pernyataan pada sebuah kalimat maka wajib diakhiri dengan sitasi.
+
+\subsection{Related Works}
+Penjelasan singkat dengan sitasi dari artikel yang direferensikan. Artikel yang dijelaskan merupakan artikel yang terkait dengan kata kunci penelitian.
+
+\subsection{Method}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,pada rumus \ref{eq:1} dijelaskan bahwa anu itu penting.
 \begin{equation}\label{eq:1}
