--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -5,7 +5,7 @@ Penulisan jurnal harus menggunakan Latex dengan template IEEE.　Template bisa d
 \section{Standar Penulisan}
 Di dalam penulisan artikel ilmiah harus mengikuti standar minimal penulisan ilmiah. Standar ini digunakan untuk menyamakan semantik bahasa agar tulisan lebih mudah dibaca dan dipahami. Penggunaan standar merupakan keniscayaan dalam penulisan artikel ilmiah.
 \subsection{Penggunaan Kalimat}
-Penulisan jurnal harus menggunakan kalimat aktif dan positif. Memiliki Subject, Predikat dan Object yang jelas. Tidak bertele-tele dan terlalu panjang dalam penggunaan kalimat(terlalu banyak kata sambung dan tanda koma). Satu paragraf minimal terdiri dari tiga kalimat.
+Penulisan jurnal harus menggunakan kalimat aktif dan positif. Memiliki Subject, Predikat dan Object yang jelas. Tidak bertele-tele dan terlalu panjang dalam penggunaan kalimat(terlalu banyak kata sambung dan tanda koma). Satu paragraf minimal terdiri dari tiga kalimat. Hindari paragraph yang terdiri dari satu kalimat yang biasanya digunakan untuk penjelasan gambar, rumus atau tabel. Lebih baik digabungkan saja dengan narasi paragraph sebelumnya. Jika memang harus ada penjelasan kalimat, maka kembangkan lagi menjadi narasi satu paragraph utuh.
 \subsection{Penempatan Sitasi}
 Sitasi ditempatkan tepat pada akhir kalimat penjelasan referensi sebelum tanda pemisah antar kalimat(koma atau titik) tanpa spasi. Sitasi juta dapat ditumpuk pada sebuah kalimat yang merupaka  penjelasan singkat dari referensi. 
 \subsection{gambar, rumus, tabel}
@@ -14,6 +14,12 @@ Tidak diperbolehkan memberikan narasi penunjukan relatif. seperti :
 	\item Lebih detailnya lihat gambar di bawah ini
 	\item Untuk lebih jelasnya lihar rumus di bawah ini
 	\item data bisa dilihat di tabel di atas
+\end{itemize}
+Diperbaiki yang seharusnya :
+\begin{itemize}
+	\item Pada gambar 1.1 terlihat bahwa data penduduk sudah mulai jenuh.
+	\item Total kejenuhan hasil kalkulasi terlihat di tabel 1.1
+	\item Rumus 1.1 merupakan rumus kalkulasi tingkat kejenuhan
 \end{itemize}
 
 \section{Kerangka Jurnal}
@@ -25,24 +31,18 @@ Terdiri dari 150-250 kata tanpa ada sitasi. Berisi latar belakang, tujuan,metode
 Terdapat penekanan dan penjelasan akan pentingnya dilakukan penelitian ini. Setiap ada pemaparan data, informasi, dan sebuah pernyataan pada sebuah kalimat maka wajib diakhiri dengan sitasi.
 
 \subsection{Related Works}
-Penjelasan singkat dengan sitasi dari artikel yang direferensikan. Artikel yang dijelaskan merupakan artikel yang terkait dengan kata kunci penelitian.
+Penjelasan singkat dengan sitasi dari artikel yang direferensikan. Artikel yang dijelaskan merupakan artikel yang terkait dengan kata kunci penelitian. Minimal 3 Paragraph. Pada paragraph terakhir harus ada pernyataan perbedaan antara penelitian yang akan dilakukan dengan penelitian yang disebutkan pada sitasi di related works.
 
 \subsection{Method}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,pada rumus \ref{eq:1} dijelaskan bahwa anu itu penting.
-\begin{equation}\label{eq:1}
-     L = 4 \pi r^2 \,
-\end{equation}
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-\begin{verbatim}
-a = "anu"
-b = "itu"
-c = a + b
-print(c) 
-\end{verbatim}
-in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Daftar tersangka inilah :
-\begin{enumerate}
-\item darso
-\item karyo
-\item doyok
-\end{enumerate}
+Penjelasan teknis yang jelas dan gamblang mengenai metode yang digunakan dengan sitasi. Terdiri dari definisi, konsep, rumus atau diagram.
+
+\subsection{Experiment and Result}
+Data sumber yang jelas dan cukup untuk dijadikan penelitian, disertai dengan hasil nya sesuai langkah-langkah yang di tuliskan di Method.
+
+\subsection{Discussion}
+Penjelasan mengenai result dan saran pengembangan penelitian lanjutan.
+
+
+\section{Standar Format Latex}
+Bisa dilihat di menu standar portal kampus keren
