--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -5,7 +5,7 @@ Penulisan jurnal harus menggunakan Latex dengan template IEEE.　Template bisa d
 \section{Standar Penulisan}
 Di dalam penulisan artikel ilmiah harus mengikuti standar minimal penulisan ilmiah. Standar ini digunakan untuk menyamakan semantik bahasa agar tulisan lebih mudah dibaca dan dipahami. Penggunaan standar merupakan keniscayaan dalam penulisan artikel ilmiah.
 \subsection{Penggunaan Kalimat}
-Penulisan jurnal harus menggunakan kalimat aktif dan positif. Memiliki Subject, Predikat dan Object yang jelas. Tidak bertele-tele dan terlalu panjang dalam penggunaan kalimat(terlalu banyak kata sambung dan tanda koma). Satu paragraf minimal terdiri dari tiga kalimat. Hindari paragraph yang terdiri dari satu kalimat yang biasanya digunakan untuk penjelasan gambar, rumus atau tabel. Lebih baik digabungkan saja dengan narasi paragraph sebelumnya. Jika memang harus ada penjelasan kalimat, maka kembangkan lagi menjadi narasi satu paragraph utuh.
+Penulisan jurnal harus menggunakan kalimat aktif dan positif. Memiliki Subject, Predikat dan Object yang jelas. Tidak bertele-tele dan terlalu panjang dalam penggunaan kalimat(terlalu banyak kata sambung dan tanda koma). Satu paragraf minimal terdiri dari tiga kalimat. Hindari paragraph yang terdiri dari satu kalimat yang biasanya digunakan untuk penjelasan gambar, rumus atau tabel. Lebih baik digabungkan saja dengan narasi paragraph sebelumnya. Jika memang harus ada penjelasan kalimat, maka kembangkan lagi menjadi narasi satu paragraph utuh. Tidak boleh menulis kata ganti orang seperi Penulis, Saya, Kami, Mereka. Gunakan kata benda seperti penelitian ini, riset ini.
 \subsection{Penempatan Sitasi}
 Sitasi ditempatkan tepat pada akhir kalimat penjelasan referensi sebelum tanda pemisah antar kalimat(koma atau titik) tanpa spasi. Sitasi juta dapat ditumpuk pada sebuah kalimat yang merupaka  penjelasan singkat dari referensi. 
 \subsection{gambar, rumus, tabel}
