--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1,6 +1,6 @@
 \chapter{Standar Pengajuan}
 
-Pada pengajuan kali ini. Setiap mahasiswa tingkat akhir wajib untuk menemui pembimbing untuk menyepakati judul, metode, sumber data, abstrack dan referensi yang akan digunakan dalam penelitian. Pengajuan penelitian tingkat akhir(Intership II dan Tugas Akhir) dilakukan melalui formulir online yang diberikan dan diisi bersama dengan Pembimbing apabila sudah disepakati dan disetujui bersama pembimbing. Pengisian form menggunakan email poltekpos dari pembimbing. Pastikan sudah melakukan login dengan email poltekpos terlebih dahulu oleh pembimbing. Formulir bisa diakses pada laman situs if.poltekpos.ac.id. Perlu diperhatikan Formulir yang perlu diisi terdiri dari :
+Pada pengajuan kali ini. Setiap mahasiswa tingkat akhir wajib untuk menemui pembimbing untuk menyepakati judul, metode, sumber data, abstrack dan referensi yang akan digunakan dalam penelitian. Sebelum pertemuan dengan pembimbing, mahasiswa wajib sudah membuat resume dari 15 jurnal dalam 5 tahun terakhir yang terindex scopus dan dituangkan di template presentasi. Template presentasi terdapat di situs informatika. Mahasiswa wajib melakukan presentasi terlebih dahulu ke pembimbing dengan template presentasi kemudian baru melakukan diskusi.Pengajuan penelitian tingkat akhir(Intership II dan Tugas Akhir) dilakukan melalui formulir online yang diberikan dan diisi bersama dengan Pembimbing apabila sudah disepakati dan disetujui bersama pembimbing. Pengisian form menggunakan email poltekpos dari pembimbing. Pastikan sudah melakukan login dengan email poltekpos terlebih dahulu oleh pembimbing. Formulir bisa diakses pada laman situs if.poltekpos.ac.id. Perlu diperhatikan Formulir yang perlu diisi terdiri dari :
 \begin{enumerate}
 \item Judul yang diajukan dalam bahasa inggris
 \item abstrack berbahasa inggris terdiri dari 150-250 kata.
@@ -9,7 +9,7 @@ Pada pengajuan kali ini. Setiap mahasiswa tingkat akhir wajib untuk menemui pemb
 \item jumlah data yang digunakan
 \item daftar referensi
 \end{enumerate}
-Dari point diatas perlu diperhatikan adalah standar pengisian form masing-masing. Daftar nama pembimbing akan diumumkan melalui papan pengumuman dan media daring. Setiap mahasiswa tingkat akhir harus memperhatikan data dosen yang terdapat pada situs Informatika pada menu tim seperti terlihat pada gambar \ref{figure:timif}.
+Dari point diatas perlu diperhatikan adalah standar pengisian form masing-masing. Pembimbing adalah pembimbing Internship 2 dan Tugas Akhir adalah pembimbing dari Internship I. Setiap mahasiswa tingkat akhir harus memperhatikan data dosen yang terdapat pada situs Informatika pada menu tim seperti terlihat pada gambar \ref{figure:timif}.
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.5\textwidth]{figures/timif.png}}
 	\caption{Data Pembimbing dari situs informatika.}
@@ -30,4 +30,4 @@ Metode yang digunakan adalah metode yang terdapat pada referensi dalam 10 tahun 
 Sumber data penelitian harus ditargetkan dan jelas dari mana sumbernya. Sebutkan dari mana sumber datanya, berapa banyak datanya serta diskusikan bersama pembimbing mengenai jenis data apa saja yang harus didapatkan. 
 
 \section{Referensi}
-Semua referensi yang digunakan harus terindex pada google scholar. Minimal 15 referensi dari artikel terindeks Scopus dan merupakan artikel dalam 5 tahun terakhir. Format referensi yang disikan pada formulir pengajuan penelitian tingkat akhir adalah BibTex. BibTex referensi bisa didapatkan pada laman Google Scholar.
+Semua referensi yang digunakan harus terindex pada google scholar. Minimal 15 referensi dari jurnal terindeks Scopus dan merupakan artikel dalam 5 tahun terakhir. Jurnal yang terindex scopus bisa dicek di situs scimagojr.com. Format referensi yang disikan pada formulir pengajuan penelitian tingkat akhir adalah BibTex. BibTex referensi bisa didapatkan pada laman Google Scholar.
