--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -46,3 +46,10 @@ Penjelasan mengenai result dan saran pengembangan penelitian lanjutan.
 
 \section{Standar Format Latex}
 Bisa dilihat di menu standar portal kampus keren
+
+\chapter{Standar Penulisan Laporan}
+
+Penulisan Laporan untuk internship . 
+
+\section{Standar Penulisan}
+Di dalam penulisan artikel ilmiah harus mengikuti standar minimal penulisan ilmiah. Standar ini digunakan untuk menyamakan semantik bahasa agar tulisan lebih mudah dibaca dan dipahami. Penggunaan standar merupakan keniscayaan dalam penulisan artikel ilmiah.
